--- a/rust_lib/Cargo.toml
+++ b/rust_lib/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 cute = "0.3.0"
 enum-primitive-derive = "^0.1"
 num-traits = "^0.1"
+rand = "0.7.2"
 
 [dependencies.pyo3]
 #version = "0.8.2"
