--- a/rust_lib/Cargo.toml
+++ b/rust_lib/Cargo.toml
@@ -13,13 +13,15 @@ cute = "0.3.0"
 enum-primitive-derive = "^0.1"
 num-traits = "^0.1"
 rand = "0.7.2"
+stopwatch = "0.0.7"
 
 [dependencies.pyo3]
-#version = "0.8.2"
-git = "https://github.com/PyO3/pyo3.git"
-branch = "master"
+version = "0.8.5"
+#git = "https://github.com/PyO3/pyo3.git"
+#branch = "master"
 features = ["extension-module"]
 
 [dependencies.sc2-techtree]
 git = "https://github.com/danielvschoor/sc2-techtree.git"
 branch = "master"
+
