--- a/rust_lib/Cargo.toml
+++ b/rust_lib/Cargo.toml
@@ -1,3 +1,4 @@
+
 [package]
 name = "sc2_helper"
 version = "0.1.0"
@@ -9,29 +10,28 @@ name = "sc2_helper"
 crate-type = ["cdylib"]
 
 [dependencies]
-cute = "0.3.0"
 enum-primitive-derive = "^0.1"
 num-traits = "^0.1"
 rand = "0.7.2"
-stopwatch = "0.0.7"
-cache-macro = "0.4.1"
 lazy_static = "*"
-lru-cache = "*"
-noisy_float ="*"
-cached = "0.11.0"
-itertools = "0.8.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json ="*"
+rayon ="*"
+rustc-hash = "1.0.1"
 
 [dependencies.pyo3]
 version = "0.8.5"
-#git = "https://github.com/PyO3/pyo3.git"
-#branch = "master"
 features = ["extension-module"]
+
 
 [dependencies.sc2-techtree]
 git = "https://github.com/danielvschoor/sc2-techtree.git"
 branch = "master"
 
+
 [profile.release]
 opt-level = 3
-#debug = true
+debug=true
+panic="abort"
+
 
