--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,11 +33,12 @@ jobs:
           python-version: [3.7, 3.8]
 
     steps:
+      - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install maturin
+      - name: Install maturin        
         run: |
           pip install maturin
       - name: Build package
