--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,7 @@ jobs:
           os: [macos-latest, windows-latest, ubuntu-latest]
           python-version: [3.7, 3.8]
     steps:
+    - uses: actions/checkout@v2
     - name: Run tests
       run: cargo test --verbose
       
