--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,19 @@ jobs:
       - name: Install maturin        
         run: |
           pip install maturin
+          pip install virtualenv
+          virtualenv sc2_helper_env
+          
+      - name: create_venv
+      - if: matrix.os == 'windows-latest'
+        run: |
+          "sc2_helper_env/Scripts/activate"
+      - if: matrix.os == 'macos-latest'
+        run: |
+          source sc2_helper_env/bin/activate
+      - if: matrix.os == 'ubuntu-latest'
+        run: |
+          source sc2_helper_env/bin/activate
       - name: Build package
         run: |
           maturin develop --release
