--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,7 +42,7 @@ jobs:
           
       - if: matrix.os == 'windows-latest'
         run: |
-          "sc2_helper_env/Scripts/activate"
+          call "sc2_helper_env/Scripts/activate.bat"
           maturin develop --release
       - if: matrix.os == 'macos-latest'
         run: |
