Remove release job for now

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -53,23 +53,23 @@ jobs:
           source sc2_helper_env/bin/activate
           maturin develop --release
   
-  release:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-          os: [macos-latest, windows-latest, ubuntu-latest]
-          python-version: [3.7, 3.8]
-    needs: [maturin_build]
-    steps:
-    - uses: actions/checkout@master
-    - name: Create release
-      uses: Roang-zero1/github-create-release-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Create GitHub release
-      uses: Roang-zero1/github-upload-release-artifacts-action@master
-      with:
-        args: sc2_helper/
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#  release:
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#          os: [macos-latest, windows-latest, ubuntu-latest]
+#          python-version: [3.7, 3.8]
+#    needs: [maturin_build]
+#    steps:
+#    - uses: actions/checkout@master
+#    - name: Create release
+#      uses: Roang-zero1/github-create-release-action@master
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#    - name: Create GitHub release
+#      uses: Roang-zero1/github-upload-release-artifacts-action@master
+#      with:
+#        args: sc2_helper/
+#      env:
+#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
