--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,15 +8,15 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-#  test:
-#    strategy:
-#      matrix:
-#        os: [ macos-latest, windows-latest, ubuntu-latest ]
-#    runs-on: ${{ matrix.os }}
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Run tests
-#        run: cargo test --verbose
+  #  test:
+  #    strategy:
+  #      matrix:
+  #        os: [ macos-latest, windows-latest, ubuntu-latest ]
+  #    runs-on: ${{ matrix.os }}
+  #    steps:
+  #      - uses: actions/checkout@v3
+  #      - name: Run tests
+  #        run: cargo test --verbose
 
   build:
     strategy:
@@ -51,10 +51,29 @@ jobs:
           name: wheel-${{ matrix.os }}
           path: target/wheels/*.whl
 
-#  release:
-#    runs-on: ubuntu-latest
-#    needs: [build]
-#    steps:
-#    - uses: actions/checkout@master
-#    - name: Publish package distributions to PyPI
-#      uses: pypa/gh-action-pypi-publish@release/v1
+  release:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    steps:
+      - uses: actions/checkout@master
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: wheel-windows-latest
+          path: dist
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: wheel-macos-latest
+          path: dist
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: wheel-ubuntu-latest
+          path: dist
+
+      - name: Print out the contents of dist
+        run: ls -la dist
+
+#      - name: Publish package distributions to PyPI
+#        uses: pypa/gh-action-pypi-publish@release/v1
