--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,9 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: [ build ]
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/download-artifact@v3
         with:
