--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,14 @@ jobs:
     strategy:
       matrix:
         os: [ macos-latest, windows-latest, ubuntu-latest ]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: ${{ matrix.python-version }}
       - name: Install maturin
         run: |
           pip install maturin
@@ -48,7 +49,7 @@ jobs:
       - name: Upload the wheel artifact
         uses: actions/upload-artifact@v3
         with:
-          name: wheel-${{ matrix.os }}
+          name: wheel-${{ matrix.os }}-${{ matrix.python-version }}
           path: target/wheels/*.whl
 
   release:
@@ -58,20 +59,14 @@ jobs:
       contents: read
       id-token: write
     steps:
-      - uses: actions/download-artifact@v3
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
         with:
-          name: wheel-windows-latest
-          path: dist
+          path: wheel-artifacts
 
-      - uses: actions/download-artifact@v3
-        with:
-          name: wheel-macos-latest
-          path: dist
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: wheel-ubuntu-latest
-          path: dist
+      - name: Copy all wheel files into dist/
+        run: |
+          find wheel-artifacts -name '*.whl' -exec cp -prv '{}' 'dist/' ';'
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
