Only launch the release workflow when new GitHub releases are created

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,9 @@
-name: Rust
+name: PyPi Release
 
 on:
-  push:
-    branches: [ master ]
+  release:
+    types:
+      - created
 
 env:
   CARGO_TERM_COLOR: always
